src/scanparse/y.output
State 87 conflicts: 19 shift/reduce
State 135 conflicts: 13 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decls

    2 decls: decl decls
    3      | %empty

    4 exprs: exprs_nonempty
    5      | %empty

    6 exprs_nonempty: expr
    7               | exprs COMMA expr

    8 arrexpr: SQUARE_BRACKET_L exprs SQUARE_BRACKET_R

    9 ids: ids_nonempty
   10    | %empty

   11 ids_nonempty: ID
   12             | ids COMMA ID

   13 funcall: ID BRACKET_L exprs BRACKET_R

   14 cast: BRACKET_L ctype BRACKET_R expr

   15 decl: globdecl
   16     | globdef
   17     | fundef

   18 fundef: ctype ID BRACKET_L params BRACKET_R compound_statement
   19       | EXPORT ctype ID BRACKET_L params BRACKET_R compound_statement

   20 compound_statement: CURLY_BRACKET_L funbody CURLY_BRACKET_R

   21 blocks: blocks_nonempty
   22       | %empty

   23 blocks_nonempty: block
   24                | blocks block

   25 block: vardecl
   26      | fundef
   27      | stmt

   28 funbody: blocks

   29 globdef: EXPORT ctype ID SEMICOLON
   30        | ctype ID SEMICOLON
   31        | EXPORT ctype ID LET expr SEMICOLON
   32        | ctype ID LET expr SEMICOLON

   33 globdecl: EXTERN ctype SQUARE_BRACKET_L ids SQUARE_BRACKET_R ID SEMICOLON
   34         | EXTERN ctype ID SEMICOLON

   35 stmts: %empty
   36      | stmts stmt

   37 param: ctype SQUARE_BRACKET_L ids SQUARE_BRACKET_R ID
   38      | ctype ID

   39 params: params_nonempty
   40       | %empty

   41 params_nonempty: param
   42                | params COMMA param

   43 stmt: assign
   44     | exprstmt
   45     | ifelse
   46     | while
   47     | dowhile
   48     | for
   49     | return

   50 return: RETURN expr SEMICOLON
   51       | RETURN SEMICOLON

   52 exprstmt: expr SEMICOLON

   53 ifelse: IF BRACKET_L expr BRACKET_R stmt_block
   54       | IF BRACKET_L expr BRACKET_R stmt_block ELSE stmt_block

   55 while: WHILE BRACKET_L expr BRACKET_R stmt_block

   56 stmt_block: CURLY_BRACKET_L stmts CURLY_BRACKET_R
   57           | stmt

   58 dowhile: DO stmt_block WHILE BRACKET_L expr BRACKET_R SEMICOLON

   59 for: FOR BRACKET_L INT_TYPE ID LET expr COMMA expr BRACKET_R stmt_block
   60    | FOR BRACKET_L INT_TYPE ID LET expr COMMA expr COMMA expr BRACKET_R stmt_block

   61 assign: varlet LET expr SEMICOLON

   62 vardecl: ctype ID var_decl_tail
   63        | ctype SQUARE_BRACKET_L exprs SQUARE_BRACKET_R ID var_decl_tail

   64 var_decl_tail: SEMICOLON
   65              | LET expr SEMICOLON

   66 varlet: ID

   67 var: ID

   68 expr: expr PLUS expr
   69     | expr MINUS expr
   70     | expr STAR expr
   71     | expr SLASH expr
   72     | expr MOD expr
   73     | expr EQ expr
   74     | expr NE expr
   75     | expr LT expr
   76     | expr LE expr
   77     | expr GT expr
   78     | expr GE expr
   79     | expr AND expr
   80     | expr OR expr
   81     | NOT expr
   82     | MINUS expr
   83     | cast
   84     | constants
   85     | var
   86     | funcall
   87     | arrexpr

   88 constants: floatval
   89          | intval
   90          | boolval

   91 floatval: FLOAT

   92 intval: NUM

   93 boolval: TRUEVAL
   94        | FALSEVAL

   95 ctype: INT_TYPE
   96      | FLOAT_TYPE
   97      | BOOL_TYPE
   98      | VOID_TYPE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BRACKET_L (258) 13 14 18 19 53 54 55 58 59 60
    BRACKET_R (259) 13 14 18 19 53 54 55 58 59 60
    COMMA (260) 7 12 42 59 60
    SEMICOLON (261) 29 30 31 32 33 34 50 51 52 58 61 64 65
    CURLY_BRACKET_L (262) 20 56
    CURLY_BRACKET_R (263) 20 56
    SQUARE_BRACKET_L (264) 8 33 37 63
    SQUARE_BRACKET_R (265) 8 33 37 63
    MINUS (266) 69 82
    PLUS (267) 68
    STAR (268) 70
    SLASH (269) 71
    MOD (270) 72
    LE (271) 76
    LT (272) 75
    GE (273) 78
    GT (274) 77
    EQ (275) 73
    NE (276) 74
    OR (277) 80
    AND (278) 79
    NOT (279) 81
    TRUEVAL (280) 93
    FALSEVAL (281) 94
    LET (282) 31 32 59 60 61 65
    INT_TYPE (283) 59 60 95
    FLOAT_TYPE (284) 96
    BOOL_TYPE (285) 97
    VOID_TYPE (286) 98
    EXPORT (287) 19 29 31
    RETURN (288) 50 51
    IF (289) 53 54
    ELSE (290) 54
    WHILE (291) 55 58
    DO (292) 58
    FOR (293) 59 60
    EXTERN (294) 33 34
    NUM <cint> (295) 92
    FLOAT <cflt> (296) 91
    ID <id> (297) 11 12 13 18 19 29 30 31 32 33 34 37 38 59 60 62 63 66 67
    UMINUS (298)
    THEN (299)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <node> (46)
        on left: 1
        on right: 0
    decls <node> (47)
        on left: 2 3
        on right: 1 2
    exprs <node> (48)
        on left: 4 5
        on right: 7 8 13 63
    exprs_nonempty <node> (49)
        on left: 6 7
        on right: 4
    arrexpr <node> (50)
        on left: 8
        on right: 87
    ids <node> (51)
        on left: 9 10
        on right: 12 33 37
    ids_nonempty <node> (52)
        on left: 11 12
        on right: 9
    funcall <node> (53)
        on left: 13
        on right: 86
    cast <node> (54)
        on left: 14
        on right: 83
    decl <node> (55)
        on left: 15 16 17
        on right: 2
    fundef <node> (56)
        on left: 18 19
        on right: 17 26
    compound_statement <node> (57)
        on left: 20
        on right: 18 19
    blocks <node> (58)
        on left: 21 22
        on right: 24 28
    blocks_nonempty <node> (59)
        on left: 23 24
        on right: 21
    block <node> (60)
        on left: 25 26 27
        on right: 23 24
    funbody <node> (61)
        on left: 28
        on right: 20
    globdef <node> (62)
        on left: 29 30 31 32
        on right: 16
    globdecl <node> (63)
        on left: 33 34
        on right: 15
    stmts <node> (64)
        on left: 35 36
        on right: 36 56
    param <node> (65)
        on left: 37 38
        on right: 41 42
    params <node> (66)
        on left: 39 40
        on right: 18 19 42
    params_nonempty <node> (67)
        on left: 41 42
        on right: 39
    stmt <node> (68)
        on left: 43 44 45 46 47 48 49
        on right: 27 36 57
    return <node> (69)
        on left: 50 51
        on right: 49
    exprstmt <node> (70)
        on left: 52
        on right: 44
    ifelse <node> (71)
        on left: 53 54
        on right: 45
    while <node> (72)
        on left: 55
        on right: 46
    stmt_block <node> (73)
        on left: 56 57
        on right: 53 54 55 58 59 60
    dowhile <node> (74)
        on left: 58
        on right: 47
    for <node> (75)
        on left: 59 60
        on right: 48
    assign <node> (76)
        on left: 61
        on right: 43
    vardecl <node> (77)
        on left: 62 63
        on right: 25
    var_decl_tail <node> (78)
        on left: 64 65
        on right: 62 63
    varlet <node> (79)
        on left: 66
        on right: 61
    var <node> (80)
        on left: 67
        on right: 85
    expr <node> (81)
        on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
        on right: 6 7 14 31 32 50 52 53 54 55 58 59 60 61 65 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    constants <node> (82)
        on left: 88 89 90
        on right: 84
    floatval <node> (83)
        on left: 91
        on right: 88
    intval <node> (84)
        on left: 92
        on right: 89
    boolval <node> (85)
        on left: 93 94
        on right: 90
    ctype <ctype> (86)
        on left: 95 96 97 98
        on right: 14 18 19 29 30 31 32 33 34 37 38 62 63


State 0

    0 $accept: . program $end

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    BOOL_TYPE   shift, and go to state 3
    VOID_TYPE   shift, and go to state 4
    EXPORT      shift, and go to state 5
    EXTERN      shift, and go to state 6

    $default  reduce using rule 3 (decls)

    program   go to state 7
    decls     go to state 8
    decl      go to state 9
    fundef    go to state 10
    globdef   go to state 11
    globdecl  go to state 12
    ctype     go to state 13


State 1

   95 ctype: INT_TYPE .

    $default  reduce using rule 95 (ctype)


State 2

   96 ctype: FLOAT_TYPE .

    $default  reduce using rule 96 (ctype)


State 3

   97 ctype: BOOL_TYPE .

    $default  reduce using rule 97 (ctype)


State 4

   98 ctype: VOID_TYPE .

    $default  reduce using rule 98 (ctype)


State 5

   19 fundef: EXPORT . ctype ID BRACKET_L params BRACKET_R compound_statement
   29 globdef: EXPORT . ctype ID SEMICOLON
   31        | EXPORT . ctype ID LET expr SEMICOLON

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    BOOL_TYPE   shift, and go to state 3
    VOID_TYPE   shift, and go to state 4

    ctype  go to state 14


State 6

   33 globdecl: EXTERN . ctype SQUARE_BRACKET_L ids SQUARE_BRACKET_R ID SEMICOLON
   34         | EXTERN . ctype ID SEMICOLON

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    BOOL_TYPE   shift, and go to state 3
    VOID_TYPE   shift, and go to state 4

    ctype  go to state 15


State 7

    0 $accept: program . $end

    $end  shift, and go to state 16


State 8

    1 program: decls .

    $default  reduce using rule 1 (program)


State 9

    2 decls: decl . decls

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    BOOL_TYPE   shift, and go to state 3
    VOID_TYPE   shift, and go to state 4
    EXPORT      shift, and go to state 5
    EXTERN      shift, and go to state 6

    $default  reduce using rule 3 (decls)

    decls     go to state 17
    decl      go to state 9
    fundef    go to state 10
    globdef   go to state 11
    globdecl  go to state 12
    ctype     go to state 13


State 10

   17 decl: fundef .

    $default  reduce using rule 17 (decl)


State 11

   16 decl: globdef .

    $default  reduce using rule 16 (decl)


State 12

   15 decl: globdecl .

    $default  reduce using rule 15 (decl)


State 13

   18 fundef: ctype . ID BRACKET_L params BRACKET_R compound_statement
   30 globdef: ctype . ID SEMICOLON
   32        | ctype . ID LET expr SEMICOLON

    ID  shift, and go to state 18


State 14

   19 fundef: EXPORT ctype . ID BRACKET_L params BRACKET_R compound_statement
   29 globdef: EXPORT ctype . ID SEMICOLON
   31        | EXPORT ctype . ID LET expr SEMICOLON

    ID  shift, and go to state 19


State 15

   33 globdecl: EXTERN ctype . SQUARE_BRACKET_L ids SQUARE_BRACKET_R ID SEMICOLON
   34         | EXTERN ctype . ID SEMICOLON

    SQUARE_BRACKET_L  shift, and go to state 20
    ID                shift, and go to state 21


State 16

    0 $accept: program $end .

    $default  accept


State 17

    2 decls: decl decls .

    $default  reduce using rule 2 (decls)


State 18

   18 fundef: ctype ID . BRACKET_L params BRACKET_R compound_statement
   30 globdef: ctype ID . SEMICOLON
   32        | ctype ID . LET expr SEMICOLON

    BRACKET_L  shift, and go to state 22
    SEMICOLON  shift, and go to state 23
    LET        shift, and go to state 24


State 19

   19 fundef: EXPORT ctype ID . BRACKET_L params BRACKET_R compound_statement
   29 globdef: EXPORT ctype ID . SEMICOLON
   31        | EXPORT ctype ID . LET expr SEMICOLON

    BRACKET_L  shift, and go to state 25
    SEMICOLON  shift, and go to state 26
    LET        shift, and go to state 27


State 20

   33 globdecl: EXTERN ctype SQUARE_BRACKET_L . ids SQUARE_BRACKET_R ID SEMICOLON

    ID  shift, and go to state 28

    $default  reduce using rule 10 (ids)

    ids           go to state 29
    ids_nonempty  go to state 30


State 21

   34 globdecl: EXTERN ctype ID . SEMICOLON

    SEMICOLON  shift, and go to state 31


State 22

   18 fundef: ctype ID BRACKET_L . params BRACKET_R compound_statement

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    BOOL_TYPE   shift, and go to state 3
    VOID_TYPE   shift, and go to state 4

    $default  reduce using rule 40 (params)

    param            go to state 32
    params           go to state 33
    params_nonempty  go to state 34
    ctype            go to state 35


State 23

   30 globdef: ctype ID SEMICOLON .

    $default  reduce using rule 30 (globdef)


State 24

   32 globdef: ctype ID LET . expr SEMICOLON

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 49
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 25

   19 fundef: EXPORT ctype ID BRACKET_L . params BRACKET_R compound_statement

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    BOOL_TYPE   shift, and go to state 3
    VOID_TYPE   shift, and go to state 4

    $default  reduce using rule 40 (params)

    param            go to state 32
    params           go to state 54
    params_nonempty  go to state 34
    ctype            go to state 35


State 26

   29 globdef: EXPORT ctype ID SEMICOLON .

    $default  reduce using rule 29 (globdef)


State 27

   31 globdef: EXPORT ctype ID LET . expr SEMICOLON

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 55
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 28

   11 ids_nonempty: ID .

    $default  reduce using rule 11 (ids_nonempty)


State 29

   12 ids_nonempty: ids . COMMA ID
   33 globdecl: EXTERN ctype SQUARE_BRACKET_L ids . SQUARE_BRACKET_R ID SEMICOLON

    COMMA             shift, and go to state 56
    SQUARE_BRACKET_R  shift, and go to state 57


State 30

    9 ids: ids_nonempty .

    $default  reduce using rule 9 (ids)


State 31

   34 globdecl: EXTERN ctype ID SEMICOLON .

    $default  reduce using rule 34 (globdecl)


State 32

   41 params_nonempty: param .

    $default  reduce using rule 41 (params_nonempty)


State 33

   18 fundef: ctype ID BRACKET_L params . BRACKET_R compound_statement
   42 params_nonempty: params . COMMA param

    BRACKET_R  shift, and go to state 58
    COMMA      shift, and go to state 59


State 34

   39 params: params_nonempty .

    $default  reduce using rule 39 (params)


State 35

   37 param: ctype . SQUARE_BRACKET_L ids SQUARE_BRACKET_R ID
   38      | ctype . ID

    SQUARE_BRACKET_L  shift, and go to state 60
    ID                shift, and go to state 61


State 36

   14 cast: BRACKET_L . ctype BRACKET_R expr

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    BOOL_TYPE   shift, and go to state 3
    VOID_TYPE   shift, and go to state 4

    ctype  go to state 62


State 37

    8 arrexpr: SQUARE_BRACKET_L . exprs SQUARE_BRACKET_R

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    $default  reduce using rule 5 (exprs)

    exprs           go to state 63
    exprs_nonempty  go to state 64
    arrexpr         go to state 45
    funcall         go to state 46
    cast            go to state 47
    var             go to state 48
    expr            go to state 65
    constants       go to state 50
    floatval        go to state 51
    intval          go to state 52
    boolval         go to state 53


State 38

   82 expr: MINUS . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 66
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 39

   81 expr: NOT . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 67
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 40

   93 boolval: TRUEVAL .

    $default  reduce using rule 93 (boolval)


State 41

   94 boolval: FALSEVAL .

    $default  reduce using rule 94 (boolval)


State 42

   92 intval: NUM .

    $default  reduce using rule 92 (intval)


State 43

   91 floatval: FLOAT .

    $default  reduce using rule 91 (floatval)


State 44

   13 funcall: ID . BRACKET_L exprs BRACKET_R
   67 var: ID .

    BRACKET_L  shift, and go to state 68

    $default  reduce using rule 67 (var)


State 45

   87 expr: arrexpr .

    $default  reduce using rule 87 (expr)


State 46

   86 expr: funcall .

    $default  reduce using rule 86 (expr)


State 47

   83 expr: cast .

    $default  reduce using rule 83 (expr)


State 48

   85 expr: var .

    $default  reduce using rule 85 (expr)


State 49

   32 globdef: ctype ID LET expr . SEMICOLON
   68 expr: expr . PLUS expr
   69     | expr . MINUS expr
   70     | expr . STAR expr
   71     | expr . SLASH expr
   72     | expr . MOD expr
   73     | expr . EQ expr
   74     | expr . NE expr
   75     | expr . LT expr
   76     | expr . LE expr
   77     | expr . GT expr
   78     | expr . GE expr
   79     | expr . AND expr
   80     | expr . OR expr

    SEMICOLON  shift, and go to state 69
    MINUS      shift, and go to state 70
    PLUS       shift, and go to state 71
    STAR       shift, and go to state 72
    SLASH      shift, and go to state 73
    MOD        shift, and go to state 74
    LE         shift, and go to state 75
    LT         shift, and go to state 76
    GE         shift, and go to state 77
    GT         shift, and go to state 78
    EQ         shift, and go to state 79
    NE         shift, and go to state 80
    OR         shift, and go to state 81
    AND        shift, and go to state 82


State 50

   84 expr: constants .

    $default  reduce using rule 84 (expr)


State 51

   88 constants: floatval .

    $default  reduce using rule 88 (constants)


State 52

   89 constants: intval .

    $default  reduce using rule 89 (constants)


State 53

   90 constants: boolval .

    $default  reduce using rule 90 (constants)


State 54

   19 fundef: EXPORT ctype ID BRACKET_L params . BRACKET_R compound_statement
   42 params_nonempty: params . COMMA param

    BRACKET_R  shift, and go to state 83
    COMMA      shift, and go to state 59


State 55

   31 globdef: EXPORT ctype ID LET expr . SEMICOLON
   68 expr: expr . PLUS expr
   69     | expr . MINUS expr
   70     | expr . STAR expr
   71     | expr . SLASH expr
   72     | expr . MOD expr
   73     | expr . EQ expr
   74     | expr . NE expr
   75     | expr . LT expr
   76     | expr . LE expr
   77     | expr . GT expr
   78     | expr . GE expr
   79     | expr . AND expr
   80     | expr . OR expr

    SEMICOLON  shift, and go to state 84
    MINUS      shift, and go to state 70
    PLUS       shift, and go to state 71
    STAR       shift, and go to state 72
    SLASH      shift, and go to state 73
    MOD        shift, and go to state 74
    LE         shift, and go to state 75
    LT         shift, and go to state 76
    GE         shift, and go to state 77
    GT         shift, and go to state 78
    EQ         shift, and go to state 79
    NE         shift, and go to state 80
    OR         shift, and go to state 81
    AND        shift, and go to state 82


State 56

   12 ids_nonempty: ids COMMA . ID

    ID  shift, and go to state 85


State 57

   33 globdecl: EXTERN ctype SQUARE_BRACKET_L ids SQUARE_BRACKET_R . ID SEMICOLON

    ID  shift, and go to state 86


State 58

   18 fundef: ctype ID BRACKET_L params BRACKET_R . compound_statement

    CURLY_BRACKET_L  shift, and go to state 87

    compound_statement  go to state 88


State 59

   42 params_nonempty: params COMMA . param

    INT_TYPE    shift, and go to state 1
    FLOAT_TYPE  shift, and go to state 2
    BOOL_TYPE   shift, and go to state 3
    VOID_TYPE   shift, and go to state 4

    param  go to state 89
    ctype  go to state 35


State 60

   37 param: ctype SQUARE_BRACKET_L . ids SQUARE_BRACKET_R ID

    ID  shift, and go to state 28

    $default  reduce using rule 10 (ids)

    ids           go to state 90
    ids_nonempty  go to state 30


State 61

   38 param: ctype ID .

    $default  reduce using rule 38 (param)


State 62

   14 cast: BRACKET_L ctype . BRACKET_R expr

    BRACKET_R  shift, and go to state 91


State 63

    7 exprs_nonempty: exprs . COMMA expr
    8 arrexpr: SQUARE_BRACKET_L exprs . SQUARE_BRACKET_R

    COMMA             shift, and go to state 92
    SQUARE_BRACKET_R  shift, and go to state 93


State 64

    4 exprs: exprs_nonempty .

    $default  reduce using rule 4 (exprs)


State 65

    6 exprs_nonempty: expr .
   68 expr: expr . PLUS expr
   69     | expr . MINUS expr
   70     | expr . STAR expr
   71     | expr . SLASH expr
   72     | expr . MOD expr
   73     | expr . EQ expr
   74     | expr . NE expr
   75     | expr . LT expr
   76     | expr . LE expr
   77     | expr . GT expr
   78     | expr . GE expr
   79     | expr . AND expr
   80     | expr . OR expr

    MINUS  shift, and go to state 70
    PLUS   shift, and go to state 71
    STAR   shift, and go to state 72
    SLASH  shift, and go to state 73
    MOD    shift, and go to state 74
    LE     shift, and go to state 75
    LT     shift, and go to state 76
    GE     shift, and go to state 77
    GT     shift, and go to state 78
    EQ     shift, and go to state 79
    NE     shift, and go to state 80
    OR     shift, and go to state 81
    AND    shift, and go to state 82

    $default  reduce using rule 6 (exprs_nonempty)


State 66

   68 expr: expr . PLUS expr
   69     | expr . MINUS expr
   70     | expr . STAR expr
   71     | expr . SLASH expr
   72     | expr . MOD expr
   73     | expr . EQ expr
   74     | expr . NE expr
   75     | expr . LT expr
   76     | expr . LE expr
   77     | expr . GT expr
   78     | expr . GE expr
   79     | expr . AND expr
   80     | expr . OR expr
   82     | MINUS expr .

    $default  reduce using rule 82 (expr)


State 67

   68 expr: expr . PLUS expr
   69     | expr . MINUS expr
   70     | expr . STAR expr
   71     | expr . SLASH expr
   72     | expr . MOD expr
   73     | expr . EQ expr
   74     | expr . NE expr
   75     | expr . LT expr
   76     | expr . LE expr
   77     | expr . GT expr
   78     | expr . GE expr
   79     | expr . AND expr
   80     | expr . OR expr
   81     | NOT expr .

    $default  reduce using rule 81 (expr)


State 68

   13 funcall: ID BRACKET_L . exprs BRACKET_R

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    $default  reduce using rule 5 (exprs)

    exprs           go to state 94
    exprs_nonempty  go to state 64
    arrexpr         go to state 45
    funcall         go to state 46
    cast            go to state 47
    var             go to state 48
    expr            go to state 65
    constants       go to state 50
    floatval        go to state 51
    intval          go to state 52
    boolval         go to state 53


State 69

   32 globdef: ctype ID LET expr SEMICOLON .

    $default  reduce using rule 32 (globdef)


State 70

   69 expr: expr MINUS . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 95
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 71

   68 expr: expr PLUS . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 96
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 72

   70 expr: expr STAR . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 97
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 73

   71 expr: expr SLASH . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 98
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 74

   72 expr: expr MOD . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 99
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 75

   76 expr: expr LE . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 100
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 76

   75 expr: expr LT . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 101
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 77

   78 expr: expr GE . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 102
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 78

   77 expr: expr GT . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 103
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 79

   73 expr: expr EQ . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 104
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 80

   74 expr: expr NE . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 105
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 81

   80 expr: expr OR . expr

    BRACKET_L         shift, and go to state 36
    SQUARE_BRACKET_L  shift, and go to state 37
    MINUS             shift, and go to state 38
    NOT               shift, and go to state 39
    TRUEVAL           shift, and go to state 40
    FALSEVAL          shift, and go to state 41
    NUM               shift, and go to state 42
    FLOAT             shift, and go to state 43
    ID                shift, and go to state 44

    arrexpr    go to state 45
    funcall    go to state 46
    cast       go to state 47
    var        go to state 48
    expr       go to state 106
    constants  go to state 50
    floatval   go to state 51
    intval     go to state 52
    boolval    go to state 53


State 82

   79 expr: expr AND . expr
